--- a/web/src/styles/pages/orphanages-map.css
+++ b/web/src/styles/pages/orphanages-map.css
@@ -69,11 +69,15 @@
     background: rgba(255,255,255,0.8);
     border-radius: 20px;
     box-shadow: none;
+
+    position: absolute;
+    top: 6px;
+    left: 40px;
 }
 
 #page-map .map-popup .leaflet-popup-content{
     color: #0089a5;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     margin: 8px 12px;
 
